assets/styles/_header.scss
> header {
	// The distance from the initial, centered logo until it is “stuck”.
	--header--scroll: calc(
			(
				var(--vh--initial, 100vh)
				- var(--logo--height)
				- var(--tagline--height)
				- var(--margin) * 3
			)
			/ 2
		);

	// The collapsed/scrolled header sticky offset.
	--header--scroll--offset: calc(
			-100vh
			+ var(--logo--height--scaled)
			+ var(--tagline--height)
			+ var(--margin) * 3
		);

	display:         flex;
	flex-direction:  column;
	gap:             var(--margin);
	grid-area:       header;
	height:          calc(100vh + var(--header--scroll));
	justify-content: space-between;
	padding:         var(--margin);
	position:        sticky;
	top:             calc(var(--header--scroll--offset) - var(--header--scroll));

	@include landscape {
		padding-left:  initial; // Grid gaps take over.
		padding-right: initial;
		top:           calc(-1 * var(--header--scroll));
	}



	// The “logo”.
	> section:first-child {
		margin-top: var(--header--scroll);
		position:   sticky;
		top:        var(--margin);

		> h1 {
			@extend %font--heldane--regular;

			--typography--leading: calc(5/6);
			--typography--size:    8.8rem;

			--transition--duration: 100ms;

			align-items:                start;
			display:                    flex;
			flex-direction:             column;
			position:                   absolute;
			transform-origin:           0px -0.025em; // Optical shift down, for “A“ overshoot.
			transform:                  scale(calc(1 - (1 - var(--logo--scale)) * var(--logo--scroll)));
			transition-delay:           calc(var(--color--transition) / 4), 0ms;
			transition-duration:        calc(var(--color--transition) / 2), var(--transition--duration);
			transition-property:        color, transform;
			transition-timing-function: linear;
			will-change:                transform;

			@include breakpoint(320) { --typography--size: 8rem; }
			@include breakpoint(568) { --typography--size: 7.2rem; }

			@include breakpoint(768) {
				--typography--size: 12.4rem;

				--transition--duration: 50ms; // Can go faster on desktop.
			}

			@include breakpoint(1024) { --typography--size: 13.2rem; }

			> a {
				@extend %link--text;
			}



			// Logo kerning tweaks.
			#art--header {
				.a { letter-spacing: -0.04em; } // Tighten the “Ar”.
			}

			#media--header {
				.m { letter-spacing: -0.04em; } // “Me”.
				.d { letter-spacing:  0.02em; } // “di“.
			}

			#science--header {
				.s { letter-spacing: -0.01em; } // “Sc“.
				.i { letter-spacing: -0.01em; } // “ie“.
				.n { letter-spacing: -0.01em; } // “nc“.
			}
		}
	}



	// The “tagline”.
	> section:last-child {
		bottom:   var(--margin);
		position: sticky;

		> a {
			@extend %link--element;

			> p {
				--typography--size:    2.4rem;
				--typography--leading: 1;

				@include breakpoint(768) {
					--typography--size: 3.6rem;
				}
			}
		}

	}
}

